# rust_book

./: Cargo.toml  LICENSE  README.md
projects/advanced_features/: Cargo.toml
projects/advanced_features/src/: callrust.c  lib.rs  main.rs
projects/async_recursion/: Cargo.toml
projects/async_recursion/src/: main.rs
projects/blog/: Cargo.toml
projects/blog/src/: lib.rs
projects/collections/: Cargo.toml
projects/collections/src/: main.rs
projects/common_programming_concepts/: Cargo.toml
projects/common_programming_concepts/src/: main.rs
projects/enums_and_pattern_matching/: Cargo.toml
projects/enums_and_pattern_matching/src/: main.rs
projects/error_handling/: Cargo.toml
projects/error_handling/src/: hello.txt  main.rs
projects/fearless_concurrency/: Cargo.toml
projects/fearless_concurrency/src/: main.rs
projects/functional_language_features/: Cargo.toml
projects/functional_language_features/src/: lib.rs  main.rs
projects/generic_types_traits_lifetimes/: Cargo.toml
projects/generic_types_traits_lifetimes/src/: main.rs
projects/generic_types_traits_lifetimes/src/generics/: mod.rs
projects/guessing_game/: Cargo.toml
projects/guessing_game/src/: main.rs
projects/hello_cargo/: Cargo.toml
projects/macros/: Cargo.toml
projects/macros/hello_macro/: Cargo.toml
projects/macros/hello_macro/hello_macro_derive/: Cargo.toml
projects/macros/macro_derive/: Cargo.toml
projects/macros/pancakes/: Cargo.toml
projects/macros/pancakes/src/: main.rs
projects/macros/src/: lib.rs
projects/minigrep/: Cargo.toml  README.md  poem.txt
projects/minigrep/src/: lib.rs  main.rs
projects/more_about_cargo_and_crates/: Cargo.toml
projects/oo_programming/: Cargo.toml
projects/oo_programming/src/: lib.rs  main.rs
projects/packages_crates/: Cargo.toml
projects/patterns_and_matching/: Cargo.toml
projects/patterns_and_matching/src/: main.rs
projects/restaurant/: Cargo.toml
projects/restaurant/src/: lib.rs
projects/restaurant/src/front_of_house/: hosting.rs  serving.rs
projects/smart_pointers/: Cargo.toml
projects/smart_pointers/src/: lib.rs  main.rs
projects/structs/: Cargo.toml
projects/structs/src/: main.rs
projects/understanding_ownership/: Cargo.toml
projects/understanding_ownership/src/: main.rs
projects/web_server/hello/: 404.html  Cargo.toml
projects/web_server/hello/src/: lib.rs  main.rs
projects/writing_automated_tests/: Cargo.toml
projects/writing_automated_tests/src/: lib.rs  main.rs  rect.rs
projects/writing_automated_tests/src/adder/: adder.rs  tests.rs
projects/writing_automated_tests/src/rect/: rect.rs  tests.rs
projects/writing_automated_tests/src/tests/: integration_test.rs
projects/writing_automated_tests/tests/: integration_test.rs
