[workspace]
members = [
    "projects/hello_cargo",
    "projects/guessing_game",
    "projects/common_programming_concepts",
    "projects/understanding_ownership",
    "projects/structs",
    "projects/enums_and_pattern_matching",
    "projects/restaurant",
    "projects/collections",
    "projects/error_handling",
    "projects/generic_types_traits_lifetimes",
    "projects/writing_automated_tests",
    "projects/minigrep",
    "projects/functional_language_features"
    ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
