[workspace]
members = [
    "projects/hello_cargo",
    "projects/guessing_game",
    "projects/common_programming_concepts",
    "projects/understanding_ownership",
    "projects/structs",
    "projects/enums_and_pattern_matching",
    "projects/restaurant",
    "projects/collections",
    "projects/error_handling",
    "projects/generic_types_traits_lifetimes",
    "projects/writing_automated_tests",
    "projects/minigrep",
    "projects/functional_language_features",
    "projects/more_about_cargo_and_crates",
    "projects/smart_pointers",
    "projects/fearless_concurrency",
    "projects/oo_programming",
    "projects/blog",
    "projects/patterns_and_matching",
    "projects/advanced_features",
    "projects/macros",
    "projects/macros/hello_macro",
    "projects/macros/hello_macro/hello_macro_derive"
    ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = 'abort'

