[package]
name = "async_recursion"
version = "0.1.0"
authors = ["Gavin Doughtie <gavin.doughtie@aon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1.56"
async-recursion = "1.0.0"
