[package]
name = "more_about_cargo_and_crates"
version = "0.1.0"
authors = ["Gavin Doughtie <gavin@doughtie.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "example crate to test publishing workflow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
